# tuxpp

./: CMakeLists.txt  LICENSE  README.md  SetTuxedoVersion.cmake
doc/: CMakeLists.txt  Doxyfile.in  depend.dox  install.dox  mainpage.dox  platforms.dox  scope.dox  tools.dox  tutorial.dox  tutorial_admin.dox  tutorial_buffers.dox  tutorial_comm.dox  tutorial_services.dox  tutorial_simple.dox  tutorial_xa.dox  tuxedo.dox
main/: CMakeLists.txt
main/include/tux/: admin.hpp  all.hpp  buffer.hpp  carray.hpp  context.hpp  conversation.hpp  convert.hpp  cstring.hpp  decimal_number.hpp  fml16.hpp  fml32.hpp  init_request.hpp  mbstring.hpp  message_queuing.hpp  pub_sub.hpp  record.hpp  request_response.hpp  service.hpp  service_error.hpp  transaction.hpp  unsolicited_notification.hpp  util.hpp  view16.hpp  view32.hpp  xml.hpp
main/src/: admin.cpp  buffer.cpp  carray.cpp  context.cpp  conversation.cpp  convert.cpp  cstring.cpp  decimal_number.cpp  fml16.cpp  fml32.cpp  init_request.cpp  mbstring.cpp  message_queuing.cpp  pub_sub.cpp  record.cpp  request_response.cpp  service.cpp  service_error.cpp  transaction.cpp  unsolicited_notification.cpp  util.cpp  xml.cpp
test/: CMakeLists.txt  customer.cpy  env.bat.template  env.sh.template  fields16  fields32  mssq_server.services  qmadmin_input.template  repository.template  string_info.cpy  test_server.services  test_ubb.template  tmadmin_input.template  transaction.cpy  views16  views32
test/include/: fields16.h  fields16.hpp  fields32.h  fields32.hpp  views16.h
test/src/: admin_test.cpp  buffer_test.cpp  carray_test.cpp  context_test.cpp  conversation_test.cpp  convert_test.cpp  cstring_test.cpp  decimal_number_test.cpp  fml16_test.cpp  fml32_test.cpp  init_request_test.cpp  mbstring_test.cpp  message_queuing_test.cpp  mssq_server.cpp  mssq_server_main_1211.cpp  mssq_server_main_1222.cpp  posting_server.cpp  posting_server_main_1211.cpp  posting_server_main_1211.cpp.bak  posting_server_main_1222.cpp  pub_sub_test.cpp  record_test.cpp  request_response_test.cpp  service_error_test.cpp  service_test.cpp  test_runner.cpp  test_server.cpp  test_server_main_1211.cpp  test_server_main_1222.cpp  transaction_test.cpp  unsolicited_notification_test.cpp  util_test.cpp  view16_test.cpp  view32_test.cpp  xml_test.cpp
tools/: CMakeLists.txt
tools/src/: fmlhpp16.cpp  fmlhpp32.cpp
